@@ -347,7 +347,8 @@ class ScopClassificationUtils:
             ptId = pD[tId] if tId in pD else None
             lL = self.getIdLineage(tId)
             #
-            d = {'id': tId, 'name': displayName, 'lineage': lL, 'parents': [ptId], 'depth': len(lL)}
+            #d = {'id': str(tId), 'name': displayName, 'lineage': [str(t) for t in lL], 'parents': [str(ptId)], 'depth': len(lL)}
+            d = {'id': str(tId), 'name': displayName, 'parents': [str(ptId)], 'depth': len(lL)}
             dL.append(d)
 
         return dL
