@@ -4,6 +4,7 @@
   5-Apr-2019  - V0.11 Incorporated SCOPe and CATH utilties and tests
   6-Apr-2019  - V0.12 Deliver explicit residue ranges
  10-Apr-2019  - V0.13 Simplify SCOP parent tree to named nodes, add sccs to data payload
+ 16-Apr-2019    V0.14 Cast all types in tree node lists to string and remove lineage
 
 
 
